<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_screen">

        <EditTextPreference
            android:inputType="textPassword"
            android:key="pref_apikey"
            android:password="true"
            android:summary="@string/pref_api_summary"
            android:title="@string/pref_api_title" />

        <EditTextPreference
            android:key="pref_url"
            android:title="@string/pref_url_title"
            android:summary="@string/pref_url_summary"/>

        <EditTextPreference
            android:key="pref_ordner"
            android:title="@string/pref_ordner_title"
            android:summary="@string/pref_ordner_summary"/>

    </PreferenceCategory>

</PreferenceScreen>