<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="de.einsatzkomponente.einsatzstatus.ui.MainActivity">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_status"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status">


        <Button
            android:id="@+id/feueralarm"
            android:text="Feueralarm"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:width="140dp"
            android:height="140dp"
            android:background="@drawable/feueralarm"
            android:shadowColor="#000000"
            android:shadowDx="7"
            android:shadowDy="8"
            android:shadowRadius="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            />

        <Button
            android:id="@+id/hilfeleistung"
            android:text="Hilfeleistung"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:width="140dp"
            android:height="140dp"
            android:background="@drawable/hilfeleistung"
            android:shadowColor="#000000"
            android:shadowDx="7"
            android:shadowDy="8"
            android:shadowRadius="5"
            app:layout_constraintLeft_toRightOf="@+id/feueralarm"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            />

        <Button
            android:id="@+id/uebung"
            android:text="Übungsdienst"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:width="140dp"
            android:height="140dp"
            android:background="@drawable/uebungsdienst"
            android:shadowColor="#000000"
            android:shadowDx="7"
            android:shadowDy="8"
            android:shadowRadius="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feueralarm" />
            />

        <Button
            android:id="@+id/sonstiger"

            android:text="Sonstiger Einsatz"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:width="140dp"
            android:height="140dp"
            android:background="@drawable/sonstiger_einsatz"
            android:shadowColor="#000000"
            android:shadowDx="7"
            android:shadowDy="8"
            android:shadowRadius="5"
            app:layout_constraintLeft_toRightOf="@+id/uebung"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hilfeleistung" />
            />

        <Button
            android:id="@+id/einsatzbereit"
            android:text="Einsatzbereit"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:width="285dp"
            android:height="120dp"
            android:background="@drawable/einsatzbereit"
            android:shadowColor="#000000"
            android:shadowDx="7"
            android:shadowDy="8"
            android:shadowRadius="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uebung" />
            />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_paypal_description"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/paypal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/paypal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="285dp"
        android:height="70dp"
        android:text="@string/button_paypal"
        android:textSize="12sp"
        android:background="@drawable/gradient_paypal"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/ic_paypal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

</android.support.constraint.ConstraintLayout>
